[tool.poetry]
name = "upm"
version = "0.1.0"
description = ""
authors = ["Eris9 <cool5tarxv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pip = "^22.0.4"
discord = "^1.7.3"
ramael = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
